[package]
name = "clsx"
version = "0.1.1"
edition = "2021"
authors = ["Geoffrey Garrett"]
description = "A flexible class name composition utility for Rust, inspired by clsx and tailwind-merge."
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoffreygarrett/rclsx"
homepage = "https://github.com/geoffreygarrett/rclsx#readme"
documentation = "https://docs.rs/rclsx"

[dependencies]
leptos = { version = "0.7.3" }

[features]
default = []
